cmake_minimum_required(VERSION 3.25)
project(Yandex)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sprint1_A
        Sprint1/A/C++/main.cpp)
add_executable(Sprint1_B
        Sprint1/B/C++/main.cpp)
add_executable(Sprint1_C
        Sprint1/C/C++/main.cpp)
add_executable(Sprint1_D
        Sprint1/D/C++/main.cpp)
add_executable(Sprint1_E
        Sprint1/E/C++/main.cpp)
add_executable(Sprint1_F
        Sprint1/F/C++/main.cpp)
add_executable(Sprint1_G
        Sprint1/G/C++/main.cpp)
add_executable(Sprint1_H
        Sprint1/H/C++/main.cpp)
add_executable(Sprint1_I
        Sprint1/I/C++/main.cpp)
add_executable(Sprint1_J
        Sprint1/J/C++/main.cpp)
add_executable(Sprint1_K
        Sprint1/K/C++/main.cpp)
add_executable(Sprint1_L
        Sprint1/L/C++/main.cpp)

add_executable(Sprint1_Final_A
        "Sprint1 Final/A/C++/main.cpp")
add_executable(Sprint1_Final_B
        "Sprint1 Final/B/C++/main.cpp")

add_executable(Sprint2_A
        Sprint2/A/C++/main.cpp)
add_executable(Sprint2_B
        Sprint2/B/C++/main.cpp)
add_executable(Sprint2_C
        Sprint2/C/C++/main.cpp)
add_executable(Sprint2_D
        Sprint2/D/C++/main.cpp)
add_executable(Sprint2_E
        Sprint2/E/C++/main.cpp)
add_executable(Sprint2_F
        Sprint2/F/C++/main.cpp)
add_executable(Sprint2_G
        Sprint2/G/C++/main.cpp)
add_executable(Sprint2_H
        Sprint2/H/C++/main.cpp)
add_executable(Sprint2_I
        Sprint2/I/C++/main.cpp)
add_executable(Sprint2_J
        Sprint2/J/C++/main.cpp)
add_executable(Sprint2_K
        Sprint2/K/C++/main.cpp)
add_executable(Sprint2_L
        Sprint2/L/C++/main.cpp)

add_executable(Sprint2_Final_A
        "Sprint2 Final/A/C++/main.cpp")
add_executable(Sprint2_Final_B
        "Sprint2 Final/B/C++/main.cpp")