cmake_minimum_required(VERSION 3.25)
project(Yandex)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sprint1_A
        Sprint1/A/C++/main.cpp)
add_executable(Sprint1_B
        Sprint1/B/C++/main.cpp)
add_executable(Sprint1_C
        Sprint1/C/C++/main.cpp)
add_executable(Sprint1_D
        Sprint1/D/C++/main.cpp)
add_executable(Sprint1_E
        Sprint1/E/C++/main.cpp)
add_executable(Sprint1_F
        Sprint1/F/C++/main.cpp)
add_executable(Sprint1_G
        Sprint1/G/C++/main.cpp)
add_executable(Sprint1_H
        Sprint1/H/C++/main.cpp)
add_executable(Sprint1_I
        Sprint1/I/C++/main.cpp)
add_executable(Sprint1_J
        Sprint1/J/C++/main.cpp)
add_executable(Sprint1_K
        Sprint1/K/C++/main.cpp)
add_executable(Sprint1_L
        Sprint1/L/C++/main.cpp)

add_executable(Sprint1_Final_A
        "Sprint1 Final/A/C++/main.cpp")
add_executable(Sprint1_Final_B
        "Sprint1 Final/B/C++/main.cpp")

add_executable(Sprint2_A
        Sprint2/A/C++/main.cpp)
add_executable(Sprint2_B
        Sprint2/B/C++/main.cpp)
add_executable(Sprint2_C
        Sprint2/C/C++/main.cpp)
add_executable(Sprint2_D
        Sprint2/D/C++/main.cpp)
add_executable(Sprint2_E
        Sprint2/E/C++/main.cpp)
add_executable(Sprint2_F
        Sprint2/F/C++/main.cpp)
add_executable(Sprint2_G
        Sprint2/G/C++/main.cpp)
add_executable(Sprint2_H
        Sprint2/H/C++/main.cpp)
add_executable(Sprint2_I
        Sprint2/I/C++/main.cpp)
add_executable(Sprint2_J
        Sprint2/J/C++/main.cpp)
add_executable(Sprint2_K
        Sprint2/K/C++/main.cpp)
add_executable(Sprint2_L
        Sprint2/L/C++/main.cpp)

add_executable(Sprint2_Final_A
        "Sprint2 Final/A/C++/main.cpp")
add_executable(Sprint2_Final_B
        "Sprint2 Final/B/C++/main.cpp")

add_executable(Sprint3_A
        Sprint3/A/C++/main.cpp)
add_executable(Sprint3_B
        Sprint3/B/C++/main.cpp)
add_executable(Sprint3_C
        Sprint3/C/C++/main.cpp)
add_executable(Sprint3_D
        Sprint3/D/C++/main.cpp)
add_executable(Sprint3_E
        Sprint3/E/C++/main.cpp)
add_executable(Sprint3_F
        Sprint3/F/C++/main.cpp)
add_executable(Sprint3_G
        Sprint3/G/C++/main.cpp)
add_executable(Sprint3_H
        Sprint3/H/C++/main.cpp)
add_executable(Sprint3_I
        Sprint3/I/C++/main.cpp)
add_executable(Sprint3_J
        Sprint3/J/C++/main.cpp)
add_executable(Sprint3_K
        Sprint3/K/C++/main.cpp)
add_executable(Sprint3_L
        Sprint3/L/C++/main.cpp)
add_executable(Sprint3_M
        Sprint3/M/C++/main.cpp)
add_executable(Sprint3_N
        Sprint3/N/C++/main.cpp)
add_executable(Sprint3_O
        Sprint3/O/C++/main.cpp)
add_executable(Sprint3_P
        Sprint3/P/C++/main.cpp)

add_executable(Sprint3_Final_A
        "Sprint3 Final/A/C++/main.cpp")
add_executable(Sprint3_Final_B
        "Sprint3 Final/B/C++/main.cpp")

add_executable(Sprint4_A
        Sprint4/A/C++/main.cpp)
add_executable(Sprint4_B
        Sprint4/B/C++/main.cpp)
add_executable(Sprint4_C
        Sprint4/C/C++/main.cpp)
add_executable(Sprint4_D
        Sprint4/D/C++/main.cpp)
add_executable(Sprint4_E
        Sprint4/E/C++/main.cpp)
add_executable(Sprint4_F
        Sprint4/F/C++/main.cpp)
add_executable(Sprint4_G
        Sprint4/G/C++/main.cpp)
add_executable(Sprint4_H
        Sprint4/H/C++/main.cpp)
add_executable(Sprint4_I
        Sprint4/I/C++/main.cpp)
add_executable(Sprint4_J
        Sprint4/J/C++/main.cpp)
add_executable(Sprint4_K
        Sprint4/K/C++/main.cpp)
add_executable(Sprint4_L
        Sprint4/L/C++/main.cpp)

add_executable(Sprint4_Final_A
        "Sprint4 Final/A/C++/main.cpp")
add_executable(Sprint4_Final_B
        "Sprint4 Final/B/C++/main.cpp")

add_executable(Sprint5_A
        Sprint5/A/C++/main.cpp)
add_executable(Sprint5_B
        Sprint5/B/C++/main.cpp)
add_executable(Sprint5_C
        Sprint5/C/C++/main.cpp)
add_executable(Sprint5_D
        Sprint5/D/C++/main.cpp)
add_executable(Sprint5_E
        Sprint5/E/C++/main.cpp)
add_executable(Sprint5_F
        Sprint5/F/C++/main.cpp)
add_executable(Sprint5_G
        Sprint5/G/C++/main.cpp)
add_executable(Sprint5_H
        Sprint5/H/C++/main.cpp)
add_executable(Sprint5_I
        Sprint5/I/C++/main.cpp)
add_executable(Sprint5_J
        Sprint5/J/C++/main.cpp)
add_executable(Sprint5_K
        Sprint5/K/C++/main.cpp)
add_executable(Sprint5_L
        Sprint5/L/C++/main.cpp)
add_executable(Sprint5_M
        Sprint5/M/C++/main.cpp)
add_executable(Sprint5_N
        Sprint5/N/C++/main.cpp)

add_executable(Sprint5_Final_A
        "Sprint5 Final/A/C++/main.cpp")
add_executable(Sprint5_Final_B
        "Sprint5 Final/B/C++/main.cpp")

add_executable(Sprint6_A
        Sprint6/A/C++/main.cpp)
add_executable(Sprint6_B
        Sprint6/B/C++/main.cpp)
add_executable(Sprint6_C
        Sprint6/C/C++/main.cpp)
add_executable(Sprint6_D
        Sprint6/D/C++/main.cpp)
add_executable(Sprint6_E
        Sprint6/E/C++/main.cpp)
add_executable(Sprint6_F
        Sprint6/F/C++/main.cpp)
add_executable(Sprint6_G
        Sprint6/G/C++/main.cpp)
add_executable(Sprint6_H
        Sprint6/H/C++/main.cpp)
add_executable(Sprint6_J
        Sprint6/J/C++/main.cpp)
add_executable(Sprint6_K
        Sprint6/K/C++/main.cpp)
add_executable(Sprint6_L
        Sprint6/L/C++/main.cpp)
add_executable(Sprint6_M
        Sprint6/M/C++/main.cpp)

add_executable(Sprint6_Final_A
        "Sprint6 Final/A/C++/main.cpp")
add_executable(Sprint6_Final_B
        "Sprint6 Final/B/C++/main.cpp")

add_executable(Sprint7_A
        Sprint7/A/C++/main.cpp)
add_executable(Sprint7_B
        Sprint7/B/C++/main.cpp)
add_executable(Sprint7_C
        Sprint7/C/C++/main.cpp)
add_executable(Sprint7_D
        Sprint7/D/C++/main.cpp)
add_executable(Sprint7_E
        Sprint7/E/C++/main.cpp)
add_executable(Sprint7_F
        Sprint7/F/C++/main.cpp)
add_executable(Sprint7_G
        Sprint7/G/C++/main.cpp)
add_executable(Sprint7_H
        Sprint7/H/C++/main.cpp)
add_executable(Sprint7_I
        Sprint7/I/C++/main.cpp)
add_executable(Sprint7_J
        Sprint7/J/C++/main.cpp)
add_executable(Sprint7_K
        Sprint7/K/C++/main.cpp)
add_executable(Sprint7_L
        Sprint7/L/C++/main.cpp)
add_executable(Sprint7_M
        Sprint7/M/C++/main.cpp)
add_executable(Sprint7_N
        Sprint7/N/C++/main.cpp)
add_executable(Sprint7_O
        Sprint7/O/C++/main.cpp)